[gd_scene load_steps=7 format=3 uid="uid://rubaexyfn1of"]

[ext_resource type="Script" uid="uid://crvaxhdu87ce0" path="res://scripts/NPC/Shop/shop_keeper.gd" id="1_1hm1r"]
[ext_resource type="Texture2D" uid="uid://xhbgctnrdhrr" path="res://assets/maps/dungeon/supplies_objects.png" id="2_1hm1r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_if5d1"]
atlas = ExtResource("2_1hm1r")
region = Rect2(110, 0, 54, 65)

[sub_resource type="SpriteFrames" id="SpriteFrames_8jy22"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_if5d1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_f3d3s"]
radius = 173.35873

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rdkry"]
size = Vector2(152, 200)

[node name="Shopkeeper" type="Node2D"]
script = ExtResource("1_1hm1r")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, 22.5)
scale = Vector2(2.7777777, 3.0615385)
sprite_frames = SubResource("SpriteFrames_8jy22")

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2(-4, 21.5)
shape = SubResource("CircleShape2D_f3d3s")

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -132.0
offset_top = -165.0
offset_bottom = -130.0
grow_horizontal = 2
scale = Vector2(2, 2)
theme_override_font_sizes/font_size = 20
text = "[E] to Interact"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ClossionArea" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClossionArea"]
position = Vector2(-3, 22)
shape = SubResource("RectangleShape2D_rdkry")

[connection signal="body_entered" from="InteractionArea" to="." method="_on_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_body_exited"]
